--- a/Ix.NET/Source/System.Interactive.Async.Providers.Tests/AsyncQueryableExTests.Generated.tt
+++ b/Ix.NET/Source/System.Interactive.Async.Providers.Tests/AsyncQueryableExTests.Generated.tt
@@ -185,7 +185,7 @@ foreach (var m in typeof(AsyncEnumerableEx).GetMethods()
     {
         var td = m.ReturnType.GetGenericTypeDefinition();
 
-        if (td == typeof(Task<>))
+        if (td.Name.EndsWith("Task`1")) // NB: Covers Task and ValueTask
         {
             factory = "ExecuteAsync<" + toQuotedImpl(m.ReturnType.GetGenericArguments()[0], -1, false) + ">";
 
@@ -453,7 +453,7 @@ if (indexes.Count != 0)
 
     if (!failing.Contains(tm.Name))
     {
-        if (tmRet == typeof(Task<>))
+        if (tmRet.Name.EndsWith("Task`1")) // NB: Covers Task and ValueTask
         {
 #>
             AssertEx.SucceedOrFailProper(() => res.Wait());
