--- a/Ix.NET/Source/System.Linq.Async/System/Linq/Operators/Average.Generated.tt
+++ b/Ix.NET/Source/System.Linq.Async/System/Linq/Operators/Average.Generated.tt
@@ -58,9 +58,7 @@ foreach (var o in os)
 if (isNullable)
 {
 #>
-                var e = _source.GetConfiguredAsyncEnumerator(_cancellationToken, false);
-
-                try // REVIEW: Can use `await using` if we get pattern bind (HAS_AWAIT_USING_PATTERN_BIND)
+                await using (var e = _source.GetConfiguredAsyncEnumerator(_cancellationToken, false))
                 {
                     while (await e.MoveNextAsync())
                     {
@@ -86,10 +84,6 @@ if (isNullable)
                         }
                     }
                 }
-                finally
-                {
-                    await e.DisposeAsync();
-                }
 
                 return null;
 <#
@@ -97,9 +91,7 @@ if (isNullable)
 else
 {
 #>
-                var e = _source.GetConfiguredAsyncEnumerator(_cancellationToken, false);
-
-                try // REVIEW: Can use `await using` if we get pattern bind (HAS_AWAIT_USING_PATTERN_BIND)
+                await using (var e = _source.GetConfiguredAsyncEnumerator(_cancellationToken, false))
                 {
                     if (!await e.MoveNextAsync())
                     {
@@ -118,10 +110,6 @@ else
                     }
 
                     return <#=res#>;
-                }
-                finally
-                {
-                    await e.DisposeAsync();
                 }
 <#
 }
@@ -144,9 +132,7 @@ else
 if (isNullable)
 {
 #>
-                var e = _source.GetConfiguredAsyncEnumerator(_cancellationToken, false);
-
-                try // REVIEW: Can use `await using` if we get pattern bind (HAS_AWAIT_USING_PATTERN_BIND)
+                await using (var e = _source.GetConfiguredAsyncEnumerator(_cancellationToken, false))
                 {
                     while (await e.MoveNextAsync())
                     {
@@ -172,10 +158,6 @@ if (isNullable)
                         }
                     }
                 }
-                finally
-                {
-                    await e.DisposeAsync();
-                }
 
                 return null;
 <#
@@ -183,9 +165,7 @@ if (isNullable)
 else
 {
 #>
-                var e = _source.GetConfiguredAsyncEnumerator(_cancellationToken, false);
-
-                try // REVIEW: Can use `await using` if we get pattern bind (HAS_AWAIT_USING_PATTERN_BIND)
+                await using (var e = _source.GetConfiguredAsyncEnumerator(_cancellationToken, false))
                 {
                     if (!await e.MoveNextAsync())
                     {
@@ -204,10 +184,6 @@ else
                     }
 
                     return <#=res#>;
-                }
-                finally
-                {
-                    await e.DisposeAsync();
                 }
 <#
 }
@@ -230,9 +206,7 @@ else
 if (isNullable)
 {
 #>
-                var e = _source.GetConfiguredAsyncEnumerator(_cancellationToken, false);
-
-                try // REVIEW: Can use `await using` if we get pattern bind (HAS_AWAIT_USING_PATTERN_BIND)
+                await using (var e = _source.GetConfiguredAsyncEnumerator(_cancellationToken, false))
                 {
                     while (await e.MoveNextAsync())
                     {
@@ -258,10 +232,6 @@ if (isNullable)
                         }
                     }
                 }
-                finally
-                {
-                    await e.DisposeAsync();
-                }
 
                 return null;
 <#
@@ -269,9 +239,7 @@ if (isNullable)
 else
 {
 #>
-                var e = _source.GetConfiguredAsyncEnumerator(_cancellationToken, false);
-
-                try // REVIEW: Can use `await using` if we get pattern bind (HAS_AWAIT_USING_PATTERN_BIND)
+                await using (var e = _source.GetConfiguredAsyncEnumerator(_cancellationToken, false))
                 {
                     if (!await e.MoveNextAsync())
                     {
@@ -290,10 +258,6 @@ else
                     }
 
                     return <#=res#>;
-                }
-                finally
-                {
-                    await e.DisposeAsync();
                 }
 <#
 }
@@ -317,9 +281,7 @@ else
 if (isNullable)
 {
 #>
-                var e = _source.GetConfiguredAsyncEnumerator(_cancellationToken, false);
-
-                try // REVIEW: Can use `await using` if we get pattern bind (HAS_AWAIT_USING_PATTERN_BIND)
+                await using (var e = _source.GetConfiguredAsyncEnumerator(_cancellationToken, false))
                 {
                     while (await e.MoveNextAsync())
                     {
@@ -345,10 +307,6 @@ if (isNullable)
                         }
                     }
                 }
-                finally
-                {
-                    await e.DisposeAsync();
-                }
 
                 return null;
 <#
@@ -356,9 +314,7 @@ if (isNullable)
 else
 {
 #>
-                var e = _source.GetConfiguredAsyncEnumerator(_cancellationToken, false);
-
-                try // REVIEW: Can use `await using` if we get pattern bind (HAS_AWAIT_USING_PATTERN_BIND)
+                await using (var e = _source.GetConfiguredAsyncEnumerator(_cancellationToken, false))
                 {
                     if (!await e.MoveNextAsync())
                     {
@@ -377,10 +333,6 @@ else
                     }
 
                     return <#=res#>;
-                }
-                finally
-                {
-                    await e.DisposeAsync();
                 }
 <#
 }
