--- a/Ix.NET/Source/System.Linq.Async/System/Linq/Operators/Sum.Generated.tt
+++ b/Ix.NET/Source/System.Linq.Async/System/Linq/Operators/Sum.Generated.tt
@@ -46,7 +46,7 @@ foreach (var o in os)
             {
                 var sum = <#=o.zero#>;
 
-                await foreach (<#=o.type#> value in _source.WithCancellation(_cancellationToken).ConfigureAwait(false))
+                await foreach (<#=o.type#> value in AsyncEnumerableExtensions.WithCancellation(_source, _cancellationToken).ConfigureAwait(false))
                 {
 <#
 if (o.@checked)
@@ -84,7 +84,7 @@ else
             {
                 var sum = <#=o.zero#>;
 
-                await foreach (TSource item in _source.WithCancellation(_cancellationToken).ConfigureAwait(false))
+                await foreach (TSource item in AsyncEnumerableExtensions.WithCancellation(_source, _cancellationToken).ConfigureAwait(false))
                 {
                     var value = _selector(item);
 
@@ -124,7 +124,7 @@ else
             {
                 var sum = <#=o.zero#>;
 
-                await foreach (TSource item in _source.WithCancellation(_cancellationToken).ConfigureAwait(false))
+                await foreach (TSource item in AsyncEnumerableExtensions.WithCancellation(_source, _cancellationToken).ConfigureAwait(false))
                 {
                     var value = await _selector(item).ConfigureAwait(false);
 
@@ -165,7 +165,7 @@ else
             {
                 var sum = <#=o.zero#>;
 
-                await foreach (TSource item in _source.WithCancellation(_cancellationToken).ConfigureAwait(false))
+                await foreach (TSource item in AsyncEnumerableExtensions.WithCancellation(_source, _cancellationToken).ConfigureAwait(false))
                 {
                     var value = await _selector(item, _cancellationToken).ConfigureAwait(false);
 
